--- a/pom.xml
+++ b/pom.xml
@@ -88,13 +88,13 @@
             <artifactId>allure-java-commons</artifactId>
             <version>2.21.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider -->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider &ndash;&gt;
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-surefire-provider</artifactId>
             <version>1.3.2</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
@@ -130,11 +130,11 @@
     </systemProperties>
     </configuration>
         <dependencies>
-            <dependency>
+            <!--<dependency>
                 <groupId>org.junit.platform</groupId>
                 <artifactId>junit-platform-surefire-provider</artifactId>
                 <version>1.3.2</version>
-            </dependency>
+            </dependency>-->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
