--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,16 @@
         <version>${junit.jupiter.version}</version>
         <scope>test</scope>
     </dependency>
-    <!--To avoid compiler warnings about @API annotations in JUnit code-->
+
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--To avoid compiler warnings about @API annotations in JUnit code-->
     <dependency>
         <groupId>org.apiguardian</groupId>
         <artifactId>apiguardian-api</artifactId>
@@ -81,20 +90,12 @@
             <version>3.12.0</version>
         </dependency>
 
-
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-java-commons -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-java-commons</artifactId>
             <version>2.21.0</version>
         </dependency>
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider &ndash;&gt;
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>1.3.2</version>
-            <scope>test</scope>
-        </dependency>-->
 
     </dependencies>
 
@@ -130,11 +131,6 @@
     </systemProperties>
     </configuration>
         <dependencies>
-            <!--<dependency>
-                <groupId>org.junit.platform</groupId>
-                <artifactId>junit-platform-surefire-provider</artifactId>
-                <version>1.3.2</version>
-            </dependency>-->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
