--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,16 @@
             </dependency>
         </dependencies>
     </plugin>
+
+        <!-- подключение плагина allure-maven для вызова функций Allure с помощью Maven -->
+        <plugin>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.10.0</version>
+            <configuration>
+                <reportVersion>2.12.0</reportVersion>
+            </configuration>
+        </plugin>
     </plugins>
     </build>
 
